--- a/themes/yazaki-lab/layouts/_default/baseof.html
+++ b/themes/yazaki-lab/layouts/_default/baseof.html
@@ -16,7 +16,7 @@
   </aside>
   </div>
   <!-- フッター -->
-  <footer class="footer mt-auto py-3 bg-body-tertiary">
+  <footer class="bg-body-tertiary fixed-bottom navbar">
     <div class="container">
       {{ partial "footer.html" . }}
     </div>
