--- a/themes/yazaki-lab/layouts/_default/list.html
+++ b/themes/yazaki-lab/layouts/_default/list.html
@@ -1,7 +1,9 @@
 {{ define "main" }}
-  <h1>{{ .Title }}</h1>
-  {{ .Content }}
-  {{ range .Pages }}
-    {{ .Render "summary" }}
-  {{ end }}
+  <div class="container p-3">
+    <h1>{{ .Title }}</h1>
+    {{ .Content }}
+    {{ range .Pages }}
+      {{ .Render "summary" }}
+    {{ end }}
+  </div>
 {{ end }}
