--- a/themes/yazaki-lab/layouts/partials/footer.html
+++ b/themes/yazaki-lab/layouts/partials/footer.html
@@ -1,7 +1,7 @@
-{{ $page := . }}
+<!-- {{ $page := . }}
 {{ with .GetPage "/contact" }}
   {{ if not (eq $page .) }}
     {{ .Content }}
   {{ end }}
-{{ end }}
-<p>Copyright Yazaki Lab {{ now.Year }}. All rights reserved.</p>
+{{ end }} -->
+<p class="mx-auto">Copyright Yazaki Lab {{ now.Year }}. All rights reserved.</p>
