--- a/themes/yazaki-lab/layouts/partials/header.html
+++ b/themes/yazaki-lab/layouts/partials/header.html
@@ -1,6 +1,8 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">{{ site.Title }}</a>
+      <a class="navbar-brand" href="/">{{ site.Title }}</a>
+      <div class="d-flex">
       {{ partial "menu.html" (dict "menuID" "main" "page" .) }}
+    </div>
     </div>
 </nav>
