--- a/themes/yazaki-lab/layouts/404.html
+++ b/themes/yazaki-lab/layouts/404.html
@@ -1,3 +1,17 @@
 {{ define "main" }}
-<h1>404 Not Found</h1>
+<div class="d-flex align-items-center justify-content-center vh-100">
+    <div class="text-center row">
+        <div class=" col-md-6">
+            <img src="/img/404.png" alt="" class="img-fluid" style="max-width: 300px;">
+        </div>
+        <div class="col-md-6 mt-1">
+            <h1 class="display-1 fw-bold">404</h1>
+            <p class="lead">
+                お探しのページは見つかりませんでした
+            </p>
+            <a href="/" class="btn btn-primary">TOPへ</a>
+        </div>
+
+    </div>
+</div>
 {{ end }}
