--- a/assets/ananke/css/custom.css
+++ b/assets/ananke/css/custom.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700&display=swap');
 
 .serif {
-    font-family: "Noto Sans JP", "Hiragino Kaku Gothic ProN", Meiryo, sans-serifl
+    font-family: "Noto Sans JP", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
+}
+
+/* Hide the page publish date that the theme prints under each title */
+article header time {
+    display: none;
 }
